--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 			<!-- Новая статья   - промо -->
 			<div class="section-block">
 				<div class="title-new-article">Новая статья</div>
-				<article class="article-wrapper">
+				<article class="article-wrapper" ID="markdownArticleResult">
 					<h2>Заголовок статьи</h2>
 					<p>Далеко-далеко за <a href="#">словесными горами в стране</a>, гласных и согласных живут рыбные тексты. Использовало однажды гор семь, снова раз. Города большой безорфографичный меня.</p>
 					<p>Lorem имени, продолжил своего реторический своих послушавшись грустный даль страну парадигматическая океана рыбными, рыбного переписывается, страна? Свой заголовок свое, он.</p>
@@ -102,6 +102,8 @@
 		<p>Проект сделал Алексей Данчин на интенсиве от <a href="https://WebCademy.ru" target="_blank">WebCademy.ru</a></p>
 	</footer>
 	<!-- Копирайты -->
+	<script src="./js/init.js" ></script>
+
 	<script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
 	<script src="./js/index.js"></script>
 
